# omnicam

./: CMakeLists.txt  README.md
src/: corners.cpp  graphics.cpp  graphics.cpp~  mutex.cpp
